# setup-dosei

./: .env  .gitignore  README.md  action.yaml  pyproject.toml
.github/workflows/: test.yml
dctl/: config.py  main.py
dctl/commands/: login.py  logout.py  logs.py  new.py
dctl/commands/env/: __init__.py  list.py  set.py
dctl/commands/project/: __init__.py  list.py  open.py
dctl/utils/: params.py  session.py
deployplex/: config.py  main.py
deployplex/commands/: login.py  logout.py
deployplex/commands/secrets/: __init__.py  list.py  set.py
deployplex/schemas/: session.py
deployplex/utils/: session.py
