[tool.poetry]
name = "dctl"
version = "0.0.16"
description = "Command Line Interface (CLI) for Dosei"
authors = ["Alvaro Molina <am@dosei.ai>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.scripts]
dctl = 'dctl.main:cli'



[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
